Fix collasible section icon alignment.

--- a/app/assets/stylesheets/components/editorial/_collapsible.scss
+++ b/app/assets/stylesheets/components/editorial/_collapsible.scss
@@ -39,7 +39,7 @@
     height: 28px;
     display: inline-block;
     color: $color-icon-open;
-    vertical-align: bottom;
+    vertical-align: middle;
   }
 }
 
